dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/sumo_main.cpp)
AC_CANONICAL_SYSTEM

dnl create an config-header
AM_CONFIG_HEADER(src/config.h)

dnl enable automake-support
AM_INIT_AUTOMAKE(sumo,0.9.6)

AC_PREFIX_DEFAULT(/usr/local)
if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

dnl enable libtool-support
AM_PROG_LIBTOOL


dnl Check for enable-features that shall go into config.h
AC_ARG_ENABLE(rpc,
              [  --enable-rpc          enable compilation of rpc features [default=no].],
              [AC_DEFINE(_RPC, 1,
                         [Define to 1 in order to enable sumo debugging code.])
	      ])
AM_CONDITIONAL([WITH_XMLRPC], [test "$rpc" = "1"])

	      
AC_ARG_ENABLE(geomcheck,
              [  --enable-geomcheck          enable compilation of geometry checks [default=no].],
              [AC_DEFINE(CHECK_UNIQUE_POINTS_GEOMETRY, 1,
                         [Undefine in order to enable geometry checking.])
	      ])

AC_ARG_ENABLE(memcheck,
              [  --enable-memcheck          enable compilation of memory leak checks [default=no].],
              [AC_DEFINE(CHECK_MEMORY_LEAKS, 1,
                         [Undefine in order to enable memory checks.])
	      ])

AC_ARG_ENABLE(debug,
              [  --enable-debug          enable sumo debugging code [default=no].],
              [AC_DEFINE(_DEBUG, 1,
                         [Define to 1 in order to enable sumo debugging code.])
	      ])

AC_ARG_ENABLE(assert,
              [  --disable-assert        disable assertions [default=no].],
              [AC_DEFINE(NDEBUG, 1,
                         [Define to 1 in order to disable assertions.])
	      ])

AC_ARG_ENABLE(inline,
              [  --disable-inline        disable inlining [default=no].],
              [AC_DEFINE(DISABLE_INLINE, 1,
                         [Define to 1 in order to disable inlining.])
	      ])

AC_ARG_ENABLE(speedcheck,
              [  --enable-speedcheck     enable sumo speedchecking code [default=no].],
              [AC_DEFINE(_SPEEDCHECK, 1,
                         [Define to 1 in order to enable simulation-speed checking.])
	      ])

AC_ARG_ENABLE(cfront,
              [  --enable-cfront         enable external template definitions. [default=no].],
              [cfront_model=true],[cfront_model=false])

if test x$cfront_model = xtrue; then
	AC_DEFINE(EXTERNAL_TEMPLATE_DEFINITION, 1,
		[Define to 1 in order to enable external template definitions (cfront-model).])
fi

AM_CONDITIONAL(CFRONT, test x$cfront_model = xtrue)

AM_CONDITIONAL(CHECK_UNIQUE_POINTS_GEOMETRY, test x$CHECK_UNIQUE_POINTS_GEOMETRY = 1)
AM_CONDITIONAL(CHECK_MEMORY_LEAKS, test x$CHECK_MEMORY_LEAKS = 1)
AC_DEFINE([SUMOReal], [float], [defines the precision of floats])


dnl ---------------------------------------------
dnl check for libraries...
dnl - - - - - - - - - - - - - - - - - - - - - - -
search_path="/usr /usr/local /opt"

dnl  ... for xerces
AC_ARG_WITH(xerces,
    [  --with-xerces=DIR           where Xerces-C is installed (libraries in DIR/lib, headers in DIR/include).],
    [  ac_xerces="$withval"
    ])
if test x"$ac_xerces" != x; then
   if test x"$ac_xerces_libraries" = x; then
      ac_xerces_libraries=$ac_xerces/lib
   fi
   if test x"$ac_xerces_includes" = x; then
      ac_xerces_includes=$ac_xerces/include
   fi
fi

dnl   ... for libs
AC_ARG_WITH(xerces-libraries,
    [  --with-xerces-libraries=DIR where the Xerces library is installed.],
    [  ac_xerces_libraries="$withval"
    ])

AC_MSG_CHECKING([for xerces-lib])
if test x"$ac_xerces_libraries" = x; then
   for xerces_path in $search_path ; do
      if test -e $xerces_path/lib/libxerces.so; then
         ac_xerces_lib_path=$xerces_path/lib
         ac_xerceslib=xerces
         break
      elif test -e $xerces_path/lib/libxerces-c.so; then
         ac_xerces_lib_path=$xerces_path/lib
         ac_xerceslib=xerces-c
         break
      elif test -e $xerces_path/xerces/lib/libxerces.so; then
         ac_xerces_lib_path=$xerces_path/xerces/lib
         ac_xerceslib=xerces
         break
      elif test -e $xerces_path/xerces/lib/libxerces-c.so; then
         ac_xerces_lib_path=$xerces_path/xerces/lib
         ac_xerceslib=xerces-c
         break
      fi
   done
   if test x"$ac_xerces_lib_path" != x; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([xerces-lib not found. Specify path with option --with-xerces-libraries=DIR.])
   fi
else
   if test -e "$ac_xerces_libraries/libxerces.so" -o -e "$ac_xerces_libraries/libxerces.dll.a"; then
      AC_MSG_RESULT([yes])
      ac_xerces_lib_path="$ac_xerces_libraries"
      ac_xerceslib=xerces
   elif test -e "$ac_xerces_libraries/libxerces-c.so" -o -e "$ac_xerces_libraries/libxerces-c.dll.a"; then
      AC_MSG_RESULT([yes])
      ac_xerces_lib_path="$ac_xerces_libraries"
      ac_xerceslib=xerces-c
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([xerces-lib not found in "$ac_xerces_libraries".])
   fi
fi
XERCES_LDFLAGS="$ac_xerces_lib_path"
AC_SUBST(XERCES_LDFLAGS)
LIB_XERCES="$ac_xerceslib"
AC_SUBST(LIB_XERCES)
dnl   ... for includes
AC_ARG_WITH(xerces-includes,
    [  --with-xerces-includes=DIR  where the Xerces includes are. ],
    [
       ac_xerces_includes="$withval"
    ])

AC_MSG_CHECKING([for xerces-includes])
if test x"$ac_xerces_includes" = x; then
   for xerces_path in $search_path ; do
      if test -e $xerces_path/include/xercesc; then
         ac_xerces_includes=$xerces_path/include
         break
      elif test -e $xerces_path/xerces/include; then
         ac_xerces_includes=$xerces_path/xerces/include
         break
      fi
   done
   if test x"$ac_xerces_includes" != x; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([xerces-includes not found. Specify path with option --with-xerces-includes=DIR.])
   fi
else
   if test -e "$ac_xerces_includes/xercesc/sax2/SAX2XMLReader.hpp"; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([xerces-includes not found in "$ac_xerces_includes".])
   fi
fi
XERCES_INCLUDES="$ac_xerces_includes"
XERCES_INCLUDES_PRIOR_1_7="$ac_xerces_includes/xercesc"
AC_SUBST(XERCES_INCLUDES)
AC_SUBST(XERCES_INCLUDES_PRIOR_1_7)



dnl - - - - - - - - - - - - - - - - - - - - - - -
dnl  ... for proj and gdal
AC_ARG_WITH(proj-gdal,
    [  --with-proj-gdal=DIR        where PROJ and GDAL are installed (libraries in DIR/lib, headers in DIR/include).],
    [  ac_proj_gdal="$withval"
    ])
if test x"$ac_proj_gdal" != x; then
   if test x"$ac_proj_libraries" = x; then
      ac_proj_libraries=$ac_proj_gdal/lib
   fi
   if test x"$ac_proj_includes" = x; then
      ac_proj_includes=$ac_proj_gdal/include
   fi
   if test x"$ac_gdal_libraries" = x; then
      ac_gdal_libraries=$ac_proj_gdal/lib
   fi
   if test x"$ac_gdal_includes" = x; then
      ac_gdal_includes=$ac_proj_gdal/include
   fi
fi

dnl  ... for proj.4
dnl   ... for libs
AC_ARG_WITH(proj-libraries,
    [  --with-proj-libraries=DIR   where the PROJ library is installed (overrides previous settings).],
    [  ac_proj_libraries="$withval"
    ])

AC_MSG_CHECKING([for proj-lib])
if test x"$ac_proj_libraries" = x; then
   for proj_path in $search_path ; do
      if test -e $proj_path/lib/libproj.so; then
         ac_proj_lib_path=$proj_path/lib
         break
      elif test -e $proj_path/proj/lib/libproj.so; then
         ac_proj_lib_path=$proj_path/proj/lib
         break
      fi
   done
   if test x"$ac_proj_lib_path" != x; then
      AC_MSG_RESULT([yes])
      ac_projlib=proj
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([proj-lib not found. Specify path with option --with-proj-libraries=DIR.])
   fi
else
   if test -e "$ac_proj_libraries/libproj.so" -o -e "$ac_proj_libraries/libproj.a"; then
      AC_MSG_RESULT([yes])
      ac_proj_lib_path="$ac_proj_libraries"
      ac_projlib=proj
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([proj-lib not found in "$ac_proj_libraries".])
   fi
fi
PROJ_LDFLAGS="$ac_proj_lib_path"
AC_SUBST(PROJ_LDFLAGS)
LIB_PROJ="$ac_projlib"
AC_SUBST(LIB_PROJ)
dnl   ... for includes
AC_ARG_WITH(proj-includes,
    [  --with-proj-includes=DIR    where the PROJ includes are (overrides previous settings).],
    [
       ac_proj_includes="$withval"
    ])

AC_MSG_CHECKING([for proj-includes])
if test x"$ac_proj_includes" = x; then
   for proj_path in $search_path ; do
      if test -e $proj_path/include/proj/src/proj_api.h; then
         ac_proj_includes=$proj_path/include/proj/src/
         break
      elif test -e $proj_path/include/proj_api.h; then
         ac_proj_includes=$proj_path/include/
         break
      fi
   done
   if test x"$ac_proj_includes" != x; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([proj-includes not found. Specify path with option --with-proj-includes=DIR.])
   fi
else
   if test -e "$ac_proj_includes/proj_api.h"; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([proj-includes not found in "$ac_proj_includes".])
   fi
fi
PROJ_INCLUDES="$ac_proj_includes"
AC_SUBST(PROJ_INCLUDES)

dnl - - - - - - - - - - - - - - - - - - - - - - -
dnl  ... for gdal
dnl   ... for libs
AC_ARG_WITH(gdal-libraries,
    [  --with-gdal-libraries=DIR   where the GDAL library is installed (overrides previous settings).],
    [  ac_gdal_libraries="$withval"
    ])

AC_MSG_CHECKING([for gdal-libraries])
if test x"$ac_gdal_libraries" = x; then
   for gdal_path in $search_path ; do
      if test -e $gdal_path/lib/libgdal.so; then
         ac_gdal_lib_path=$gdal_path/lib
         break
      elif test -e $gdal_path/gdal/lib/libgdal.so; then
         ac_gdal_lib_path=$gdal_path/gdal/lib
         break
      fi
   done
   if test x"$ac_gdal_lib_path" != x; then
      AC_MSG_RESULT([yes])
      ac_gdallib=gdal
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([gdal-lib not found. Specify path with option --with-gdal-libraries=DIR.])
   fi
else
   if test -e "$ac_gdal_libraries/libgdal.so" -o -e "$ac_gdal_libraries/libgdal.a"; then
      AC_MSG_RESULT([yes])
      ac_gdal_lib_path="$ac_gdal_libraries"
      ac_gdallib=gdal
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([gdal-lib not found in "$ac_gdal_libraries".])
   fi
fi
GDAL_LDFLAGS="$ac_gdal_lib_path"
AC_SUBST(GDAL_LDFLAGS)
LIB_GDAL="$ac_gdallib"
AC_SUBST(LIB_GDAL)

dnl   ... for includes
AC_ARG_WITH(gdal-includes,
    [  --with-gdal-includes=DIR    where the GDAL includes are (overrides previous settings).],
    [
       ac_gdal_includes="$withval"
    ])
AC_MSG_CHECKING([for gdal-includes])
if test x"$ac_gdal_includes" = x; then
   for gdal_path in $search_path ; do
      if test -e $gdal_path/include/gdal; then
         ac_gdal_includes=$gdal_path/include/gdal
         break
      elif test -e $gdal_path/include/ogrsf_frmts.h; then
         ac_gdal_includes=$gdal_path/include/
         break
      fi
   done
   if test x"$ac_gdal_includes" != x; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([gdal-includes not found. Specify path with option --with-gdal-includes=DIR.])
   fi
else
   if test -e "$ac_gdal_includes/ogrsf_frmts.h"; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([gdal-includes not found in "$ac_gdal_includes".])
   fi
fi
GDAL_INCLUDES="$ac_gdal_includes"
AC_SUBST(GDAL_INCLUDES)

dnl - - - - - - - - - - - - - - - - - - - - - - -
dnl  ... for fox
dnl   ... for libs
AC_ARG_WITH(fox-libraries,
    [  --with-fox-libraries=DIR    where the Fox library is installed.],
    [  ac_fox_libraries="$withval"
    ])

AC_MSG_CHECKING([for fox-libraries])
if test x"$ac_fox_libraries" = x; then
   if test -e /usr/lib/libFOX-1.4.so; then
      AC_MSG_RESULT([yes])
      ac_fox_lib_path=/usr/lib
      ac_foxlib=FOX-1.4
   elif test -e /usr/local/lib/libFOX-1.4.so; then
      AC_MSG_RESULT([yes])
      ac_fox_lib_path=/usr/local/lib
      ac_foxlib=FOX-1.4
   elif test -e /usr/local/fox/lib/libFOX-1.4.so; then
      AC_MSG_RESULT([yes])
      ac_fox_lib_path=/usr/local/fox/lib/
      ac_foxlib=FOX-1.4
   else
      AC_MSG_RESULT([no])
      AC_MSG_RESULT([---------------------------])
      AC_MSG_RESULT([fox-lib not found.])
      AC_MSG_RESULT([Specify path with option --with-fox-libraries=DIR for gui-enabled applications.])
      AC_MSG_RESULT([---------------------------])
   fi
else
   if test -e "$ac_fox_libraries/libFOX-1.4.so"; then
      AC_MSG_RESULT([yes])
      ac_fox_lib_path="$ac_fox_libraries"
      ac_foxlib=FOX-1.4
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([fox-lib not found in "$ac_fox_libraries".])
   fi
fi
FOX_LDFLAGS="$ac_fox_lib_path"
AC_SUBST(FOX_LDFLAGS)
LIB_FOX="$ac_foxlib"
AC_SUBST(LIB_FOX)

dnl   ... for includes
AC_ARG_WITH(fox-includes,
    [  --with-fox-includes=DIR     where the Fox includes are. ],
    [
       ac_fox_includes="$withval"
    ])
AC_MSG_CHECKING([for fox-includes])
if test x"$ac_fox_includes" = x; then
   if test -e /usr/include/fox-1.4; then
      AC_MSG_RESULT([yes])
      ac_fox_includes=/usr/include/fox-1.4
   elif test -e /usr/local/include/fox-1.4; then
      AC_MSG_RESULT([yes])
      ac_fox_includes=/usr/local/include/fox-1.4
   else
      AC_MSG_RESULT([no])
      AC_MSG_RESULT([---------------------------])
      AC_MSG_RESULT([fox-lib not found.])
      AC_MSG_RESULT([Specify path with option --with-fox-includes=DIR for gui-enabled applications.])
      AC_MSG_RESULT([---------------------------])
   fi
else
   if test -e "$ac_fox_includes/fx.h"; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([fox-includes not found in "$ac_fox_includes".])
   fi
fi
FOX_INCLUDES="$ac_fox_includes"
AC_SUBST(FOX_INCLUDES)
AM_CONDITIONAL([WITH_GUI], [test x"$ac_fox_includes" != x && test x"$ac_fox_lib_path" != x])

dnl - - - - - - - - - - - - - - - - - - - - - - -
dnl  ... for XmlRpc++
dnl   ... for libs
AC_ARG_WITH(xmlrpc-libraries,
    [  --with-xmlrpc-libraries=DIR where the XmlRpc++ library is installed.],
    [  ac_xmlrpc_libraries="$withval"
    ])

AC_MSG_CHECKING([for xmlrpc-libraries])
if test x"$ac_xmlrpc_libraries" = x; then
   if test -e /usr/lib/libXmlRpc.a; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_lib_path=/usr/lib
      ac_xmlrpclib=xmlrpc
   elif test -e /usr/local/lib/libXmlRpc.a; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_lib_path=/usr/local/lib
      ac_xmlrpclib=xmlrpc
   elif test -e /usr/local/lib/xmlrpc/libXmlRpc.a; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_lib_path=/usr/local/lib/xmlrpc
      ac_xmlrpclib=xmlrpc
   else
      AC_MSG_RESULT([no])
      AC_MSG_RESULT([xmlrpc-lib not found.])
      AC_MSG_RESULT([Specify path with option --with-xmlrpc-libraries=DIR.])
   fi
else
   if test -e "$ac_xmlrpc_libraries/libXmlRpc.a"; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_lib_path="$ac_xmlrpc_libraries"
      ac_xmlrpclib=xmlrpc
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([xmlrpc-lib not found in "$ac_xmlrpc_libraries".])
   fi
fi
XMLRPC_LDFLAGS="$ac_xmlrpc_lib_path"
AC_SUBST(XMLRPC_LDFLAGS)
LIB_XMLRPC="$ac_xmlrpclib"
AC_SUBST(LIB_XMLRPC)

dnl   ... for includes
AC_ARG_WITH(xmlrpc-includes,
    [  --with-xmlrpc-includes=DIR  where the XmlRpc++ includes are. ],
    [
       ac_xmlrpc_includes="$withval"
    ])
AC_MSG_CHECKING([for xmlrpc-includes])
if test x"$ac_xmlrpc_includes" = x; then
   if test -e /usr/local/include/xmlrpc/XmlRpc.h; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_includes=/usr/local/include/xmlrpc
   elif test -e /usr/include/XmlRpc.h; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_includes=/usr/include
   elif test -e /usr/local/include/XmlRpc.h; then
      AC_MSG_RESULT([yes])
      ac_xmlrpc_includes=/usr/local/include
   else
      AC_MSG_RESULT([no])
      AC_MSG_RESULT([xmlrpc-includes not found.])
      AC_MSG_RESULT([Specify path with option --with-xmlrpc-includes=DIR.])
   fi
else
   if test -e "$ac_xmlrpc_includes/XmlRpc.h"; then
      AC_MSG_RESULT([yes])
   else
      AC_MSG_RESULT([no])
      AC_MSG_ERROR([gdal-includes not found in "$ac_gdal_includes".])
   fi
fi
XMLRPC_INCLUDES="$ac_xmlrpc_includes"
AC_SUBST(XMLRPC_INCLUDES)


dnl ---------------------------------------------


dnl Checks for typedefs, structures, and compiler characteristics.
dnl perform program name transformation
dnl AC_ARG_PROGRAM

dnl add here all your Makefiles. These will be created by configure
AC_OUTPUT(
bin/Makefile
docs/Makefile
docs/docbook/Makefile
docs/docbook/gfx/Makefile
docs/docbook/gfx/dev/Makefile
docs/docbook/gfx/in_progress/Makefile
docs/docbook/gfx/more/Makefile
docs/docbook/gfx/user/Makefile
docs/docbook/tools/Makefile
docs/docbook/xslt/Makefile
docs/docbook/xslt/sumo_html/Makefile
docs/graphviz/Makefile
docs/internet/Makefile
docs/internet/css/Makefile
docs/internet/docs/Makefile
docs/internet/docs/gen/Makefile
docs/internet/docs/gen/gfx/Makefile
docs/internet/docs/gen/gfx/dev/Makefile
docs/internet/docs/gen/gfx/more/Makefile
docs/internet/docs/gen/gfx/user/Makefile
docs/internet/docs/gen/images/Makefile
docs/internet/downloads/Makefile
docs/internet/images/Makefile
docs/internet/links/Makefile
docs/internet/menus/Makefile
docs/internet/screens/Makefile
docs/man/Makefile
src/Makefile
src/foreign/Makefile
src/foreign/nvwa/Makefile
src/gui/Makefile
src/gui/dialogs/Makefile
src/gui/drawerimpl/Makefile
src/guinetload/Makefile
src/guisim/Makefile
src/guisim/guilogging/Makefile
src/icons/Makefile
src/microsim/Makefile
src/microsim/actions/Makefile
src/microsim/devices/Makefile
src/microsim/lanechanging/Makefile
src/microsim/logging/Makefile
src/microsim/output/Makefile
src/microsim/output/e1_detectors/Makefile
src/microsim/output/e2_detectors/Makefile
src/microsim/output/e3_detectors/Makefile
src/microsim/output/meandata/Makefile
src/microsim/traffic_lights/Makefile
src/microsim/trigger/Makefile
src/multimodal/Makefile
src/netbuild/Makefile
src/netbuild/nodes/Makefile
src/netedit/Makefile
src/netgen/Makefile
src/netimport/Makefile
src/netimport/arcview/Makefile
src/netimport/artemis/Makefile
src/netimport/cell/Makefile
src/netimport/elmar/Makefile
src/netimport/elmar2/Makefile
src/netimport/sumo/Makefile
src/netimport/tiger/Makefile
src/netimport/vissim/Makefile
src/netimport/vissim/tempstructs/Makefile
src/netimport/vissim/typeloader/Makefile
src/netimport/visum/Makefile
src/netimport/xml/Makefile
src/netload/Makefile
src/od2trips/Makefile
src/polyconvert/Makefile
src/router/Makefile
src/routing_df/Makefile
src/routing_dua/Makefile
src/routing_jtr/Makefile
src/sumo_only/Makefile
src/tools/Makefile
src/utils/Makefile
src/utils/actions/Makefile
src/utils/bindevice/Makefile
src/utils/common/Makefile
src/utils/dev/Makefile
src/utils/distribution/Makefile
src/utils/foxtools/Makefile
src/utils/geoconv/Makefile
src/utils/geom/Makefile
src/utils/gfx/Makefile
src/utils/glutils/Makefile
src/utils/gui/Makefile
src/utils/gui/div/Makefile
src/utils/gui/drawer/Makefile
src/utils/gui/events/Makefile
src/utils/gui/globjects/Makefile
src/utils/gui/images/Makefile
src/utils/gui/tracker/Makefile
src/utils/gui/windows/Makefile
src/utils/helpers/Makefile
src/utils/importio/Makefile
src/utils/iodevices/Makefile
src/utils/options/Makefile
src/utils/router/Makefile
src/utils/shapes/Makefile
src/utils/sumoxml/Makefile
src/utils/xml/Makefile
tests/Makefile
tests/dfrouter/Makefile
tests/dfrouter/detector_pois/Makefile
tests/dfrouter/detector_pois/messstrecke/Makefile
tests/dfrouter/detector_types/Makefile
tests/dfrouter/detector_types/messstrecke/Makefile
tests/dfrouter/emitters/Makefile
tests/dfrouter/emitters/messstrecke/Makefile
tests/dfrouter/errors/Makefile
tests/dfrouter/errors/false_net/Makefile
tests/dfrouter/errors/false_space/Makefile
tests/dfrouter/errors/false_space2/Makefile
tests/dfrouter/errors/false_space3/Makefile
tests/dfrouter/errors/no_detectors_output/Makefile
tests/dfrouter/errors/no_detector_files/Makefile
tests/dfrouter/errors/quad_minus/Makefile
tests/dfrouter/errors/quad_minus2/Makefile
tests/dfrouter/errors/quad_minus3/Makefile
tests/dfrouter/errors/triple_minus/Makefile
tests/dfrouter/errors/triple_minus2/Makefile
tests/dfrouter/errors/triple_minus3/Makefile
tests/dfrouter/errors/unknown_option/Makefile
tests/dfrouter/meta/Makefile
tests/dfrouter/meta/help/Makefile
tests/dfrouter/meta/noop/Makefile
tests/dfrouter/routes/Makefile
tests/dfrouter/routes/messstrecke/Makefile
tests/duarouter/Makefile
tests/duarouter/alternatives/Makefile
tests/duarouter/alternatives/increasing_time/Makefile
tests/duarouter/alternatives/newstyle_colorcheck/Makefile
tests/duarouter/alternatives/newstyle_noid_increasing_time/Makefile
tests/duarouter/alternatives/newstyle_noid_one_time/Makefile
tests/duarouter/alternatives/newstyle_noid_unsorted_time/Makefile
tests/duarouter/alternatives/newstyle_with_vehtype/Makefile
tests/duarouter/alternatives/newstyle_with_vehtype_nodef/Makefile
tests/duarouter/alternatives/newstyle_with_vehtype_with_class/Makefile
tests/duarouter/alternatives/one_time/Makefile
tests/duarouter/alternatives/unsorted_time/Makefile
tests/duarouter/dua/Makefile
tests/duarouter/dua/newstyle_dua3s_step1/Makefile
tests/duarouter/dua/newstyle_dua3s_step2/Makefile
tests/duarouter/dua/newstyle_dua3s_step3/Makefile
tests/duarouter/dua/oldstyle_dua3s_step2/Makefile
tests/duarouter/dua/oldstyle_dua3s_step3/Makefile
tests/duarouter/errors/Makefile
tests/duarouter/errors/false_net/Makefile
tests/duarouter/errors/false_output/Makefile
tests/duarouter/errors/no_input/Makefile
tests/duarouter/errors/no_net/Makefile
tests/duarouter/errors/no_output/Makefile
tests/duarouter/errors/unknown_option/Makefile
tests/duarouter/flows/Makefile
tests/duarouter/flows/flows2routes/Makefile
tests/duarouter/flows/flows2routes_100s_interval/Makefile
tests/duarouter/flows/flows2routes_100s_interval_ext/Makefile
tests/duarouter/flows/flows2routes_100s_interval_typedefined/Makefile
tests/duarouter/flows/flows2routes_100s_interval_withcolor/Makefile
tests/duarouter/flows/flows2routes_100s_interval_withtype/Makefile
tests/duarouter/flows/flows2routes_100s_interval_withtype_withclass/Makefile
tests/duarouter/flows/flows2routes_200s_interval/Makefile
tests/duarouter/flows/flows2routes_200s_interval_ext/Makefile
tests/duarouter/meta/Makefile
tests/duarouter/meta/help/Makefile
tests/duarouter/meta/noop/Makefile
tests/duarouter/routes/Makefile
tests/duarouter/routes/increasing_time/Makefile
tests/duarouter/routes/newstyle_colorcheck/Makefile
tests/duarouter/routes/newstyle_increasing_colors/Makefile
tests/duarouter/routes/newstyle_noid_increasing_time/Makefile
tests/duarouter/routes/newstyle_noid_one_time/Makefile
tests/duarouter/routes/newstyle_noid_unsorted_time/Makefile
tests/duarouter/routes/newstyle_withid_increasing_time/Makefile
tests/duarouter/routes/newstyle_withid_one_time/Makefile
tests/duarouter/routes/newstyle_withid_unsorted_time/Makefile
tests/duarouter/routes/newstyle_with_vehtype/Makefile
tests/duarouter/routes/newstyle_with_vehtype_nodef/Makefile
tests/duarouter/routes/newstyle_with_vehtype_withclass/Makefile
tests/duarouter/routes/one_time/Makefile
tests/duarouter/routes/unsorted_time/Makefile
tests/duarouter/trips/Makefile
tests/duarouter/trips/increasing_time/Makefile
tests/duarouter/trips/increasing_time_notype/Makefile
tests/duarouter/trips/increasing_time_typedefined/Makefile
tests/duarouter/trips/increasing_time_typedefined_withclass/Makefile
tests/duarouter/trips/increasing_time_unsorted/Makefile
tests/duarouter/trips/increasing_time_withcolor/Makefile
tests/duarouter/trips/one_time/Makefile
tests/duarouter/trips/one_time_notype/Makefile
tests/duarouter/trips/one_time_typedefined/Makefile
tests/duarouter/trips/one_time_unsorted/Makefile
tests/duarouter/trips/unsorted_time/Makefile
tests/duarouter/trips/unsorted_time_notype/Makefile
tests/duarouter/trips/unsorted_time_typedefined/Makefile
tests/jtrrouter/Makefile
tests/jtrrouter/errors/Makefile
tests/jtrrouter/errors/false_net/Makefile
tests/jtrrouter/errors/false_output/Makefile
tests/jtrrouter/errors/no_input/Makefile
tests/jtrrouter/errors/no_net/Makefile
tests/jtrrouter/errors/no_output/Makefile
tests/jtrrouter/errors/unknown_option/Makefile
tests/jtrrouter/function/Makefile
tests/jtrrouter/function/plain/Makefile
tests/jtrrouter/function/plain/no_turnarounds/Makefile
tests/jtrrouter/function/plain/plain/Makefile
tests/jtrrouter/function/plain/straight_only/Makefile
tests/jtrrouter/function/plain/straight_only_sinks/Makefile
tests/jtrrouter/function/turns/Makefile
tests/jtrrouter/function/turns/definite_csv/Makefile
tests/jtrrouter/function/turns/definite_xml/Makefile
tests/jtrrouter/meta/Makefile
tests/jtrrouter/meta/help/Makefile
tests/jtrrouter/meta/noop/Makefile
tests/netconvert/Makefile
tests/netconvert/errors/Makefile
tests/netconvert/errors/false_output/Makefile
tests/netconvert/errors/no_output/Makefile
tests/netconvert/errors/unknown_option/Makefile
tests/netconvert/errors/xml_false_edg/Makefile
tests/netconvert/errors/xml_false_nod/Makefile
tests/netconvert/errors/xml_no_edg/Makefile
tests/netconvert/errors/xml_no_nod/Makefile
tests/netconvert/meta/Makefile
tests/netconvert/meta/help/Makefile
tests/netconvert/meta/noop/Makefile
tests/netconvert/visum/Makefile
tests/netconvert/visum/orinoko_kp573/Makefile
tests/netconvert/visum/orinoko_kp577/Makefile
tests/netconvert/XML2/Makefile
tests/netconvert/XML2/connections/Makefile
tests/netconvert/XML2/connections/cross3l_edge2edge_conns/Makefile
tests/netconvert/XML2/connections/cross3l_lane2lane_conns/Makefile
tests/netconvert/XML2/connections/cross3l_no_turnarounds/Makefile
tests/netconvert/XML2/connections/cross3l_prohibitions/Makefile
tests/netconvert/XML2/connections/cross3l_unconstrained/Makefile
tests/netconvert/XML2/function/Makefile
tests/netconvert/XML2/function/sources_notypes/Makefile
tests/netconvert/XML2/function/sources_withtypes/Makefile
tests/netconvert/XML2/internal/Makefile
tests/netconvert/XML2/internal/cross/Makefile
tests/netconvert/XML2/shapes/Makefile
tests/netconvert/XML2/shapes/hokkaido/Makefile
tests/netconvert/XML2/speed_in_kmh/Makefile
tests/netconvert/XML2/speed_in_kmh/cross_notypes_kmh/Makefile
tests/netconvert/XML2/speed_in_kmh/cross_notypes_kmh_v/Makefile
tests/netconvert/XML2/speed_in_kmh/cross_usingtypes_kmh/Makefile
tests/netconvert/XML2/speed_in_kmh/cross_usingtypes_kmh_v/Makefile
tests/netconvert/XML2/types/Makefile
tests/netconvert/XML2/types/cross_notypes/Makefile
tests/netconvert/XML2/types/cross_notypes_v/Makefile
tests/netconvert/XML2/types/cross_usingtypes/Makefile
tests/netconvert/XML2/types/cross_usingtypes_v/Makefile
tests/od2trips/Makefile
tests/od2trips/meta/Makefile
tests/od2trips/meta/help/Makefile
tests/od2trips/meta/noop/Makefile
tests/sumo/Makefile
tests/sumo/errors/Makefile
tests/sumo/errors/meandata_edges_false_order/Makefile
tests/sumo/errors/meandata_edges_missing_begin1/Makefile
tests/sumo/errors/meandata_edges_missing_begin2/Makefile
tests/sumo/errors/meandata_edges_missing_begin_divider/Makefile
tests/sumo/errors/meandata_edges_missing_end1/Makefile
tests/sumo/errors/meandata_edges_missing_end2/Makefile
tests/sumo/errors/meandata_edges_missing_end_divider/Makefile
tests/sumo/errors/unknown_option/Makefile
tests/sumo/extended/Makefile
tests/sumo/extended/emitter/Makefile
tests/sumo/extended/emitter/10_time_0_1_start0_0types_1route_noid/Makefile
tests/sumo/extended/emitter/10_time_0_1_start5_0types_1route_noid/Makefile
tests/sumo/extended/emitter/base_2randomroutes/Makefile
tests/sumo/extended/emitter/base_exp_routes/Makefile
tests/sumo/extended/emitter/base_otherroute/Makefile
tests/sumo/extended/emitter/base_period10/Makefile
tests/sumo/extended/emitter/base_vehtype1from2/Makefile
tests/sumo/extended/emitter/base_vehtype2from2/Makefile
tests/sumo/extended/emitter/base_withid/Makefile
tests/sumo/extended/rerouter/Makefile
tests/sumo/extended/rerouter/closing/Makefile
tests/sumo/extended/rerouter/closing/closing_b0_off0/Makefile
tests/sumo/extended/rerouter/closing/closing_b0_off100/Makefile
tests/sumo/extended/rerouter/closing/closing_b100_off0/Makefile
tests/sumo/extended/rerouter/dest_prob/Makefile
tests/sumo/extended/rerouter/dest_prob/dest_b0_off0/Makefile
tests/sumo/extended/rerouter/dest_prob/dest_b0_off100/Makefile
tests/sumo/extended/rerouter/dest_prob/dest_b100_off0/Makefile
tests/sumo/extended/rerouter/dest_prob/dest_single_b0_off0/Makefile
tests/sumo/extended/rerouter/route_prob/Makefile
tests/sumo/extended/rerouter/route_prob/route_b0_off0/Makefile
tests/sumo/extended/rerouter/route_prob/route_b0_off100/Makefile
tests/sumo/extended/rerouter/route_prob/route_b100_off0/Makefile
tests/sumo/extended/rerouter/route_prob/route_single_b0_off0/Makefile
tests/sumo/extended/variable_speed_signs/Makefile
tests/sumo/extended/variable_speed_signs/b0_offset_100/Makefile
tests/sumo/extended/variable_speed_signs/b100_offset_0/Makefile
tests/sumo/extended/variable_speed_signs/b100_offset_100/Makefile
tests/sumo/extended/variable_speed_signs/b100_offset_200/Makefile
tests/sumo/extended/variable_speed_signs/b100_offset_50/Makefile
tests/sumo/extended/variable_speed_signs/begin_0/Makefile
tests/sumo/meta/Makefile
tests/sumo/meta/help/Makefile
tests/sumo/meta/noop/Makefile
tests/sumo/output/Makefile
tests/sumo/output/cross3ltl_e3/Makefile
tests/sumo/output/cross3ltl_emissions/Makefile
tests/sumo/output/cross3ltl_meandata_edges/Makefile
tests/sumo/output/cross3ltl_meandata_edges_constrained/Makefile
tests/sumo/output/cross3ltl_meandata_lanes/Makefile
tests/sumo/output/cross3ltl_meandata_lanes_constrained/Makefile
tests/sumo/output/cross3ltl_rawdump/Makefile
tests/sumo/output/cross3ltl_rawdump_withempty/Makefile
tests/sumo/output/cross3ltl_tripinfo/Makefile
tests/sumo/output/cross3ltl_vehroutes/Makefile
tests/sumo/routes/Makefile
tests/sumo/routes/new_style/Makefile
tests/sumo/routes/old_style/Makefile
tests/sumo/tls/Makefile
tests/sumo/tls/cross3ltl_savetlsstate/Makefile
tests/sumo/tls/cross3ltl_savetlsswitches/Makefile
tools/Makefile
tools/dua_tools/Makefile
tools/route_tools/Makefile
tools/tls_tools/Makefile
tools/traceExporter/Makefile
tools/traceExporter/libs/Makefile
tools/traceExporter/src/Makefile
tools/traceExporter/src/ansim/Makefile
tools/traceExporter/src/ns2/Makefile
tools/trip_tools/Makefile
Makefile)

